--- a/main2.ipynb
+++ b/main2.ipynb
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "523f0cb3",
    "metadata": {},
    "outputs": [
@@ -156,14 +156,13 @@
    "source": [
     "from sentence_transformers import SentenceTransformer\n",
     "\n",
-    "# Carregar modelo\n",
     "model = SentenceTransformer('paraphrase-multilingual-MiniLM-L12-v2')\n",
     "print(\"Modelo carregado com sucesso!\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "c30feb83",
    "metadata": {},
    "outputs": [
@@ -203,7 +202,6 @@
     "os.system(\"gdown 12H957uf6mK-1X_ztT9hgFS1slpN2j-Wh\")\n",
     "os.system(\"gdown 1-QXkqH8HzLcV2JCA4Nm9G5rQhorYKJVe\")\n",
     "\n",
-    "# Verificar se os arquivos foram baixados\n",
     "path_dict = \"leandl_oesnpg_dicionario.parquet\"\n",
     "path_data = \"leandl_oesnpg_dados.parquet\"\n",
     "\n",
@@ -216,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "09e7f17b",
    "metadata": {},
    "outputs": [
@@ -237,7 +235,6 @@
     }
    ],
    "source": [
-    "# Preparar textos dos trabalhos\n",
     "trabalhos_textos = []\n",
     "for _, row in df.iterrows():\n",
     "    titulo = str(row.get('nome_producao', ''))\n",
@@ -245,21 +242,19 @@
     "    texto_completo = f\"{titulo} {resumo}\".strip()\n",
     "    trabalhos_textos.append(texto_completo)\n",
     "\n",
-    "print(f\"Total de trabalhos: {len(trabalhos_textos)}\")  # CORRIGIDO: era print=\n",
+    "print(f\"Total de trabalhos: {len(trabalhos_textos)}\") \n",
     "\n",
-    "# Obter temas únicos\n",
     "temas_unicos = df['tema'].unique()\n",
     "print(f\"Total de temas únicos: {len(temas_unicos)}\")\n",
     "\n",
-    "# Mostrar primeiros temas\n",
     "print(\"\\nPrimeiros 5 temas:\")\n",
     "for i, tema in enumerate(temas_unicos[:5]):\n",
-    "    print(f\"{i+1}. {tema[:80]}...\")  # Limitar tamanho para visualização"
+    "    print(f\"{i+1}. {tema[:80]}...\") "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "6e6bca32",
    "metadata": {},
    "outputs": [
@@ -286,7 +281,6 @@
     }
    ],
    "source": [
-    "#Gerar embeddings dos temas \n",
     "temas_embeddings = model.encode(\n",
     "    temas_unicos.tolist(), \n",
     "    show_progress_bar=True,\n",
@@ -299,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "5f4d35e5",
    "metadata": {},
    "outputs": [
@@ -320,7 +314,6 @@
     }
    ],
    "source": [
-    "#Gerar embeddings dos trabalhos \n",
     "trabalhos_embeddings = model.encode(\n",
     "    trabalhos_textos, \n",
     "    show_progress_bar=True,\n",
@@ -333,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "2605f491",
    "metadata": {},
    "outputs": [
@@ -347,9 +340,7 @@
     }
    ],
    "source": [
-    "#Comparar similaridades entre teses e temas\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
-    "# Calcular matriz de similaridade: cada linha = tese, cada coluna = tema\n",
     "similarity_matrix = cosine_similarity(trabalhos_embeddings, temas_embeddings)\n",
     "\n",
     "print(f\"Matriz de similaridade: {similarity_matrix.shape}\")\n",
@@ -358,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "47aa7156",
    "metadata": {},
    "outputs": [
@@ -371,15 +362,11 @@
     }
    ],
    "source": [
-    "#Encontrar melhor tema para cada tese usando np.argmax\n",
     "import numpy as np\n",
-    "# np.argmax pega o índice do tema com maior similaridade\n",
     "best_theme_indices = np.argmax(similarity_matrix, axis=1)\n",
     "\n",
-    "# np.max pega o valor máximo de similaridade\n",
     "best_similarities = np.max(similarity_matrix, axis=1)\n",
     "\n",
-    "# Criar DataFrame com resultados\n",
     "results_df = pd.DataFrame({\n",
     "    'tese_index': range(len(df)),\n",
     "    'melhor_tema_index': best_theme_indices,\n",
@@ -394,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "d3be6f2b",
    "metadata": {},
    "outputs": [
@@ -432,15 +419,12 @@
     "    else:\n",
     "        return 'BAIXO'\n",
     "\n",
-    "# Aplicar classificação\n",
     "results_df['nivel_aderencia'] = results_df['similaridade_maxima'].apply(classificar_aderencia)\n",
     "\n",
-    "# Verificar se o tema original é igual ao melhor tema encontrado\n",
     "results_df['tema_correto'] = results_df['tema_original'] == results_df['melhor_tema']\n",
     "\n",
     "print(\"Classificação concluída!\")\n",
     "\n",
-    "# Mostrar estatísticas\n",
     "print(f\"\\nDISTRIBUIÇÃO DOS NÍVEIS DE ADERÊNCIA:\")\n",
     "print(results_df['nivel_aderencia'].value_counts())\n",
     "\n",
@@ -457,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "828cc55d",
    "metadata": {},
    "outputs": [
@@ -548,8 +532,6 @@
    ],
    "source": [
     "# PASSO 8: Análise detalhada dos resultados\n",
-    "\n",
-    "# Exemplos de ALTA aderência\n",
     "print(\"TOP 5 - ALTA ADERÊNCIA:\")\n",
     "alta_aderencia = results_df[results_df['nivel_aderencia'] == 'ALTO'].nlargest(5, 'similaridade_maxima')\n",
     "for _, row in alta_aderencia.iterrows():\n",
@@ -577,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "79d1c676",
    "metadata": {},
    "outputs": [
@@ -593,21 +575,17 @@
     }
    ],
    "source": [
-    "# Visualizações\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "# Configurar estilo\n",
     "plt.style.use('default')\n",
     "fig, axes = plt.subplots(2, 2, figsize=(15, 12))\n",
     "\n",
-    "# 1. Distribuição dos níveis de aderência\n",
     "ax1 = axes[0, 0]\n",
     "nivel_counts = results_df['nivel_aderencia'].value_counts()\n",
     "colors = ['red', 'orange', 'green']\n",
     "ax1.pie(nivel_counts.values, labels=nivel_counts.index, autopct='%1.1f%%', colors=colors)\n",
     "ax1.set_title('Distribuição dos Níveis de Aderência')\n",
     "\n",
-    "# 2. Histograma das similaridades\n",
     "ax2 = axes[0, 1]\n",
     "ax2.hist(results_df['similaridade_maxima'], bins=30, alpha=0.7, color='skyblue', edgecolor='black')\n",
     "ax2.set_xlabel('Similaridade Máxima')\n",
@@ -616,12 +594,10 @@
     "ax2.axvline(results_df['similaridade_maxima'].mean(), color='red', linestyle='--', label='Média')\n",
     "ax2.legend()\n",
     "\n",
-    "# 3. Boxplot por nível de aderência\n",
     "ax3 = axes[1, 0]\n",
     "sns.boxplot(data=results_df, x='nivel_aderencia', y='similaridade_maxima', ax=ax3)\n",
     "ax3.set_title('Similaridade por Nível de Aderência')\n",
     "\n",
-    "# 4. Acurácia por nível\n",
     "ax4 = axes[1, 1]\n",
     "acuracia_por_nivel = results_df.groupby('nivel_aderencia')['tema_correto'].mean()\n",
     "bars = ax4.bar(acuracia_por_nivel.index, acuracia_por_nivel.values, color=['red', 'orange', 'green'])\n",
@@ -629,7 +605,6 @@
     "ax4.set_title('Acurácia do Mapeamento por Nível')\n",
     "ax4.set_ylim(0, 1)\n",
     "\n",
-    "# Adicionar valores nas barras\n",
     "for bar, value in zip(bars, acuracia_por_nivel.values):\n",
     "    ax4.text(bar.get_x() + bar.get_width()/2, bar.get_height() + 0.01, \n",
     "             f'{value:.2%}', ha='center', va='bottom')\n",
@@ -648,10 +623,8 @@
     "# PASSO 10: Salvar resultados\n",
     "print(\"Salvando resultados...\")\n",
     "\n",
-    "# Salvar DataFrame completo\n",
     "results_df.to_csv('resultados_mapeamento_temas.csv', index=False, encoding='utf-8')\n",
     "\n",
-    "# Salvar resumo estatístico\n",
     "with open('resumo_analise.txt', 'w', encoding='utf-8') as f:\n",
     "    f.write(\"=== RESUMO DA ANÁLISE DE MAPEAMENTO DE TEMAS ===\\n\\n\")\n",
     "    f.write(f\"Total de teses analisadas: {len(results_df)}\\n\")\n",
