--- a/main.ipynb
+++ b/main.ipynb
@@ -1478,7 +1478,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "aaec07b9",
       "metadata": {},
       "outputs": [
@@ -1855,33 +1855,27 @@
         "    'classificação', 'regressão', 'clusterização', 'análise de sentimentos', 'sistemas complexos'\n",
         "]\n",
         "\n",
-        "# 2. Função de normalização de texto\n",
         "def normalize_text(text):\n",
         "    text = text.lower()\n",
-        "    text = re.sub(r'[^\\w\\s]', ' ', text)  # Remove pontuação\n",
+        "    text = re.sub(r'[^\\w\\s]', ' ', text) \n",
         "    tokens = text.split()\n",
         "    tokens = [t for t in tokens if t not in ENGLISH_STOP_WORDS]\n",
         "    return ' '.join(tokens)\n",
         "\n",
-        "# 3. Carregando modelo SBERT\n",
         "model = SentenceTransformer('paraphrase-multilingual-MiniLM-L12-v2')\n",
         "\n",
-        "# 4. Função aprimorada para atribuir nível de aderência\n",
         "def nivel_aderencia(titulo, resumo, palavras_chave, tema_keywords):\n",
         "    texto = f\"{titulo} {resumo} {' '.join(palavras_chave)}\"\n",
         "    texto_norm = normalize_text(texto)\n",
         "    tema_texto = normalize_text(' '.join(tema_keywords))\n",
         "\n",
-        "    # Critério 1: presença de termos-chave\n",
         "    alta_count = sum(1 for term in TERMS_ALTA if term in texto_norm)\n",
         "    media_count = sum(1 for term in TERMS_MEDIA if term in texto_norm)\n",
         "\n",
-        "    # Critério 2: similaridade semântica via SBERT\n",
         "    emb_texto = model.encode(texto_norm, convert_to_tensor=True)\n",
         "    emb_tema = model.encode(tema_texto, convert_to_tensor=True)\n",
         "    sim = util.cos_sim(emb_texto, emb_tema).item()\n",
         "\n",
-        "    # 5. Critérios combinados e thresholds ajustados\n",
         "    if alta_count >= 2 and sim > 0.7:\n",
         "        return 'ALTA'\n",
         "    elif alta_count == 1 or (media_count >= 2 and sim > 0.5):\n",
@@ -1889,13 +1883,11 @@
         "    else:\n",
         "        return 'BAIXA'\n",
         "\n",
-        "# Palavras-chave do tema estratégico\n",
         "tema_keywords = [\n",
         "    'inteligência artificial', 'ciência de dados', 'machine learning', 'deep learning',\n",
         "    'language model', 'embedding', 'graph', 'representation learning'\n",
         "]\n",
         "\n",
-        "# Avaliação para todos os registros do DataFrame\n",
         "def obter_niveis_aderencia(df, tema_keywords):\n",
         "    niveis = []\n",
         "    for _, linha in tqdm(df.iterrows(), total=len(df)):\n",
@@ -1910,7 +1902,6 @@
         "        niveis.append(nivel)\n",
         "    return niveis\n",
         "\n",
-        "# Aplicando ao DataFrame\n",
         "dados_df['nivel_aderencia_IA'] = obter_niveis_aderencia(dados_df, tema_keywords)\n",
         "dados_df[['nome_producao', 'nivel_aderencia_IA']].head(50)"
       ]
@@ -1949,7 +1940,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "328b1f78",
       "metadata": {},
       "outputs": [
@@ -2011,7 +2002,6 @@
         }
       ],
       "source": [
-        "# Filtra apenas linhas válidas (sem None ou NaN nas duas colunas)\n",
         "df_valid = dados_df.dropna(subset=['modelo_nivel', 'nivel_aderencia_IA'])\n",
         "\n",
         "y_true = df_valid['modelo_nivel']\n",
@@ -2031,7 +2021,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "c9c39c73",
       "metadata": {},
       "outputs": [
@@ -2099,7 +2089,6 @@
         "import seaborn as sns\n",
         "import pandas as pd\n",
         "\n",
-        "# Matriz de confusão\n",
         "cm = confusion_matrix(y_true, y_pred, labels=sorted(df_valid['modelo_nivel'].unique()))\n",
         "plt.figure(figsize=(6,5))\n",
         "sns.heatmap(cm, annot=True, fmt='d', cmap='Blues', xticklabels=sorted(df_valid['modelo_nivel'].unique()), yticklabels=sorted(df_valid['modelo_nivel'].unique()))\n",
@@ -2129,7 +2118,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "ecba05c0",
       "metadata": {},
       "outputs": [
@@ -2213,12 +2202,9 @@
         "\n",
         "from codecarbon import EmissionsTracker\n",
         "\n",
-        "# Medindo a pegada de carbono do processo de classificação\n",
         "tracker = EmissionsTracker()\n",
         "tracker.start()\n",
         "\n",
-        "# Processo de classificação\n",
-        "# (repita o cálculo dos níveis de aderência, se necessário)\n",
         "dados_df['nivel_aderencia_IA'] = obter_niveis_aderencia(dados_df, tema_keywords)\n",
         "\n",
         "emissions = tracker.stop()\n",
